--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
-    <main><h1>Hongbin</h1></main>
+    <main>
+        <div class="overlay">
+        <h1>Hongbin</h1>
+    </div>
+    </main>
     
 </body>
 </html>
